# smart-home-hub

./: CMakeLists.txt
config/: hand.config.example  hub.conf.example  zigbee2mqtt.yaml
include/: config.h  device_manager.h  hub_core.h  logger.h  message.h  mqtt_client.h  provisioning.h  ws_client.h
scripts/: generate-hub-id.sh  install.sh
src/: cJSON.c  config.c  device_manager.c  hub_core.c  logger.c  main.c  message.c  mqtt_client.c  provisioning.c  ws_client.c
systemd/: smarthome-hub.service
